--- a/positionstyles.css
+++ b/positionstyles.css
@@ -33,76 +33,120 @@
 } 
 /* Activity 2 styles */ 
 .content2 {
-  /* This is the parent of the activity 2 boxes. */
+  /* This is the parent of the activity 2 boxes. 
+  grid-template-columns: 50px 50px 50px 50px;*/
+  position: relative;
+  height: 400px;  
+
 }
+
 .red2 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  top: 0;
+  left: 0; 
+  z-index: 1;
+  position: absolute;
+
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  top: 50px;
+  left: 50px; 
+  z-index: 2;
+  position: absolute;
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  top: 100px;
+  left: 100px; 
+  z-index: 3;
+  position: absolute;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  top: 150px;
+  left: 150px; 
+  z-index: 4;
+  position: absolute; 
 } 
+
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid; 
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 75px;
+
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1/3;
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  height: 200px; 
   background-color: green;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  height: 200px; 
   background-color: gold; 
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
   background-color: blue; 
+  grid-column: 1/3;
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 0;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
+  grid-column: 1/2;
+  grid-row: 1/2;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 150px; 
   background-color: green; 
+  position: relative;
+  top: 0;
+  grid-column: 2/3;
+  grid-row: 1/2;
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 100%; 
+  height: 150px; 
+  background-color: gold;
+  position: relative;
+  top: 140px;
+  grid-column: 2/3;
+  grid-row: 1/2;
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 150px; 
   background-color: blue; 
+  top: 250px;
+  position: relative;
+  grid-column: 2/3;
+  grid-row: 1/2;
 } 
 /* Activity 5 styles */ 
 .content5 {
@@ -110,50 +154,76 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 30%; 
+  height: 70%; 
   background-color: green; 
-
+  float: left;
+  position: relative;
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 100%; 
+  height: 100%; 
+  background-color: gold;
+
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 200px; 
   background-color: red; 
+  grid-column: 1/4;
+  grid-row: 1/2;
+  z-index: 0;
+  position: relative;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
+  grid-column: 1/6;
+  grid-row: 1/6;
+  z-index: 3;
+  position: relative;
+  top: 400px;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 400px; 
   background-color: gold; 
+  grid-column: 1/4;
+  grid-row: 1/5;
+  z-index: 3;
+  top: 200px;
+  left: 400px;
+  position: relative;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 400px; 
   background-color: blue; 
+  grid-column: 1/4;
+  grid-row: 1/6;
+  z-index: 2;
+  position: relative;
+  top: 100px;
+  left: 100px;
 } 
 
 
