--- a/positionstyles.css
+++ b/positionstyles.css
@@ -111,7 +111,8 @@
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 0;
 }
 .red4 {
@@ -119,14 +120,12 @@
   height: 100%; 
   background-color: red; 
   grid-column: 1/2;
-  grid-row: 1/2;
+  grid-row: 1/4;
 } 
 .green4 {
   width: 100%; 
   height: 150px; 
   background-color: green; 
-  position: relative;
-  top: 0;
   grid-column: 2/3;
   grid-row: 1/2;
 } 
@@ -134,19 +133,15 @@
   width: 100%; 
   height: 150px; 
   background-color: gold;
-  position: relative;
-  top: 140px;
   grid-column: 2/3;
-  grid-row: 1/2;
+  grid-row: 2/3;
 } 
 .blue4 {
   width: 100%; 
   height: 150px; 
   background-color: blue; 
-  top: 250px;
-  position: relative;
   grid-column: 2/3;
-  grid-row: 1/2;
+  grid-row: 3/4;
 } 
 /* Activity 5 styles */ 
 .content5 {
